@@ -1,6 +1,7 @@
 20100619: netsed 0.02a
   * detecting client/server disconnection (not only on write fail)
   * using select in treatment process to avoid useless cpu load [Debian Bug #586037]
+  * resolving rhost address if needed [Debian Bug #397420 ] 
 
 ????????: netsed 0.01c
   * last available netsed version taken from debian archive.
